--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>React image slider</title>
+    <title>React random photos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
